# llm-eval-harness

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: eval.yml
cases/: constrained-summary.yaml  receipt-extract.yaml  slugify-spec.yaml
fixtures/constrained-summary/: candidate.txt  verdict.json
fixtures/receipt-extract/: candidate.txt  verdict.json
fixtures/slugify-spec/: candidate.txt  verdict.json
harness/: __init__.py  __main__.py  config.py  judge.py  runner.py  schema.py  score.py
tests/: test_harness.py
