[project]
name = "llm-eval-harness"
version = "0.1.0"
description = "A small, transparent LLM-as-judge evaluation harness — runs fully offline in replay mode."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tyler Crawford" }]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Only needed for live mode (EVAL_LIVE=1) and re-recording fixtures (--record).
live = ["anthropic>=0.40"]
dev = ["pytest>=7.0"]

[project.scripts]
llm-eval = "harness.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["harness"]
